--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "chainengine.xyz",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.41",
