--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "chainengine.xyz",
   "license": "ISC",
   "dependencies": {
+    "@opensea/seaport-js": "^1.0.6",
     "axios": "^0.27.2",
     "form-data": "^4.0.0"
   },
